<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="drawer_item_home" translatable="false">Home</string>
    <string name="drawer_item_free_play" translatable="false">Free Play</string>
    <string name="drawer_item_custom" translatable="false">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source" translatable="false">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="services">Services</string>
    <string name="discussion">Discussion</string>
    <string name="discussionCur">Active discussion</string>
    <string name="discussionList">List of discussions</string>
    <string name="loginMenu">Log in</string>
    
	<string name="userNameEx">Ivanov Ivan</string>
    <string name="userPhoneEx" translatable="false">+71234567890</string>
    <string name="userEmailEx" translatable="false">example@mymail.com</string>
    <string name="press2reconnect">Press this button to reconnect</string>
    <string name="app_name" translatable="false">Smart Room</string>
	<string name="login_header" translatable="false">SmartRoom</string>
    <string name="action_settings">Settings</string>
    <string name="sr_client" translatable="false">SR-client</string>
    <string name="ssIP">IP address</string>
    <string name="ssPort">Port</string>
    <string name="participantLogin">Login</string>
    <string name="participantEmail">Email: </string>
    <string name="participantPhone">Phone: </string>
    <string name="participantPassword">Password</string>
    <string name="connectBtn">Log in</string>
    <string name="guestBtn">As guest</string>
    <string name="menu_services">Services</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_endPresentation">End presentation</string>
    <string name="agenda">Activity program</string>
    <string name="agenda_descr">A program of the activity</string>
    <string name="presentation">Presentation</string>
    <string name="mic_service">Microphone</string>
    <string name="presentation_descr">Show and control presentations</string>
    <string name="avail_services">Services</string>
    <string name="anonim">Sign as a spectator</string>
    <string name="startConference">Start conference</string>
    <string name="endConference">End conference</string>
    <string name="exitClientTitle">Exit client</string>
    <string name="exitClientQuestion">Do you really want to log out?</string>
    <string name="screenTimeoutTitle">Screen timeout</string>
    <string name="screenTimeoutDialog">Locks the screen after certain amount of idle time</string>
    <string name="showSpeakerTitle">Show speaker name</string>
    <string name="showSpeakerSummary">Display name in Presentation service</string>
    <string name="mic_service_not_avail">Microphone service is not available</string>
    <string name="showLackOfMemory">Display data error: insufficiet memory.</string>
    <string name="reconnectText">Reconnect</string>
    <string name="connectionLost">Smart Space connection lost</string>
    <string name="connectionFail">Failed to connect to the Smart Space.\nCheck WiFi connection.</string>
    <string name="noServicesAvailable">No services available now.\nTry again later.</string>
    <string name="agendaNotAvailable">Agenda is not available now. \nTry again later.</string>
    <string name="netService">Network service</string>
    <string name="wifiConnLost">WiFi connection lost</string>
    <string name="portFormatErr">Incorrect port</string>
    <string name="userName">Name:</string>
    <string name="userPhone">Phone:</string>
    <string name="userEmail">Email:</string>
	<string name="registrationFail">Registration failed</string>
	<string name="guestNameEmpty">Name has to be filled</string>
	<string name="emptyFields">Name and password have to be filled</string>
	<string name="registrationTitle">Registration</string>
	<string name="nameIsUsed">Entered name is already in use</string>
	<string name="chooseAction">Choose action</string>
	<string name="userAvatar">User avatar</string>
	<string name="profileLabel">Profile</string>
	<string name="action_edit">Edit</string>
	<string name="action_save">Save</string>
	<string name="personIsOffline">Unable to open profile. Person is offline.</string>
	<string name="presUnreach">Person is offline or doesn\'t have presentation.</string>
	<string name="help">Help</string>
	<string name="joiningSR">Joining SmartRoom</string>
	<string name="help_agenda">Agenda help</string>
	<string name="help_presentation">Presentation help</string>
	<string name="installAdobe">Install PDF Viewer</string>
	<string name="pdfViewerUrl" translatable="false">https://play.google.com/store/apps/details?id=the.pdfviewer3</string>
	<string name="descrSlideImg">slide image</string>
	<string name="descrRightArr">right arrow</string>
	<string name="descrLeftArr">left arrow</string>
	<string name="descrRefreshBtn">refresh btn</string>
	<string name="descrMike">mike</string>
	<string name="connectionRecoverFail">Failed to reconnect</string>
	<string name="connectionRecoverOk">Connection established</string>
	<string name="connectionTester">ConnectionTester</string>
	<string name="connectionRecoverTitle">Connection recover</string>
	<string name="connectionRecoverMsg">Establishing connection</string>
	<string name="registrationService">Registration service</string>
	<string name="advancedMode">Advanced mode</string>
	<string name="advancedModeOn">Open additional options</string>
	<string name="advancedModeOff">Close additional options</string>
	<string name="showVideo">Show video</string>
	<string name="showVideoTitle">Choose video</string>
	<string name="stopVideo">Stop video</string>
	<string name="confNotStarted">Conference has not started yet</string>
	<string name="presDownload">Would you like to download presentation?</string>
	<string name="presDownloadTitle">Downloading presentation</string>
	<string name="presRewriteDownload">Presentation is already downloaded. 
	    Would you like to rewrite it?</string>
	<string name="anonimJoinMsg">Would you like to join as anonimous?</string>
	<string name="agendaRefresh">Refresh agenda</string>
	<string name="speakerIs">Speaker is</string>
	
	<string name="signup"> Sign up</string>
	<string name="manual">Manual</string>
    <!--<string name="readingMan">Manual</string>-->
	<string name="dqBrowser">Discussion</string>
	
	<string name="kp_help_content"><![CDATA[
	    <html>
        <body>
        	<h3>Welcome to SmartRoom</h3>
        	Follow <b>registration service</b> link for registration.<br><br>
        	<b>Enter as a guest</b>: only name required.<br><br>
        	<b>Join as anonimous</b>: keep login and password fields empty. Just click Join SmartRoom button.<br><br>
        	
        	<div>Fields description:<br>
        		<b>IP</b> - IP address<br>
        		<b>Port</b> - SmartRoom port<br>
        		<b>Login</b> - your registration login<br>
        		<b>Password</b> - profile password
        	</div>
        </body>
        </html>
	    ]]>
	</string>
	
	<string name="agenda_help_content"><![CDATA[
	    <html>
        <body>
        	<p>Agenda shows the program of an activity and it&#39;s participants.</p>
        	
        	<b>--</b>&#32;If you joined as a participant your profile will be highlighted.<br><br>
        	<b>--</b>&#32;Click on any existing profile to open context menu.<br>
        </body>
        </html>
	    ]]>
	</string>
	
	<string name="presentation_help_content"><![CDATA[
	    <html>
        <body>
        	<p>Presentation allows to control presentation and use microphone.</p>
        	
        	<b>--</b>&#32;Use refresh button to update current slide.<br><br>
        	<b>--</b>&#32;Microphone icon enables interaction with microphone service.<br>
        	<b>--</b>&#32;Use left and right arrows to switch presentation slides.<br>
        </body>
        </html>
	    ]]>
	</string>
    <string name="readingMan">Manual</string>

	<string name="city">City: e.g. Petrozavodsk</string>
	<string name="searchBtn">Search</string>
	<string name="quickBtn">Quick launch</string>
	<string name="meetingBox">Run in Meeting mode</string>
	<string name="userCity">City</string>
	<string name="welcome">Welcome service</string>
	<string name="socialservice">Social Service</string>
	<string name="cityis">Your city is</string>
	<string name="citycheck">Check that city field is in latin and non-empty!</string>
	<string name="fdtitle">Founded in:</string>
	<string name="descTitle">Description</string>
	<string name="seemore">See more...</string>
	<string name="cityerror">City with such name does not exist!</string>
	<string name="participantslist">Participants</string>
	<string name="changecity">Change city</string>
	<string name="choosePerson">Choose person</string>
	<string name="no_hires_pic_found_retry">Requested image was too big. Trying to load it in smaller resolution</string>
	<string name="demo_mode_launch">Demo mode</string>
</resources>